hphp/hack/test/typecheck/expression_trees/hover_type.php.like_types.exp
File "hover_type.php", line 7, characters 3-14:
  ExprTree<[unresolved], mixed, [unresolved]>
File "hover_type.php", line 6, characters 14-14:
Typing error (Typing[4110])
  File "hover_type.php", line 6, characters 14-14:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "hover_type.php", line 6, characters 18-18:
Typing error (Typing[4110])
  File "hover_type.php", line 6, characters 18-18:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
